lib-src/makefile.w32-in: Rework dependencies. ($(BLD)/test-distrib.exe): Use LIB_SRC, not SRC. (LIB_SRC, NT_INC, GNU_LIB, MS_W32_H, CONFIG_H, INTTYPES_H, NTLIB_H) (SYSTIME_H): New macros. (SRC): Redefine to point to src/, not current directory. ($(BLD)/ctags.$(O), $(BLD)/ebrowse.$(O), $(BLD)/emacsclient.$(O)) ($(BLD)/etags.$(O), $(BLD)/hexl.$(O), $(BLD)/make-docfile.$(O)) ($(BLD)/movemail.$(O), $(BLD)/ntlib.$(O), $(BLD)/pop.$(O)) ($(BLD)/profile.$(O), $(BLD)/test-distrib.$(O)): Update dependencies. ($(BLD)/regex.$(O)): New dependency.

--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -38,7 +38,7 @@ $(BLD)/hexl.exe:		$(BLD)/hexl.$(O)
 		$(LINK) $(LINK_OUT)$@ $(LINK_FLAGS) $(BLD)/hexl.$(O) $(LIBS)
 $(BLD)/test-distrib.exe: $(BLD)/test-distrib.$(O)
 		$(LINK) $(LINK_OUT)$@ $(LINK_FLAGS) $(BLD)/test-distrib.$(O) $(LIBS)
-		"$(BLD)/test-distrib.exe" "$(SRC)/testfile"
+		"$(BLD)/test-distrib.exe" "$(LIB_SRC)/testfile"
 
 MOVEMAILOBJS =  $(BLD)/movemail.$(O) \
 		$(BLD)/pop.$(O) \
@@ -355,78 +355,108 @@ TAGS: $(BLD)/etags.exe *.c *.h
 ### DEPENDENCIES ###
 
 EMACS_ROOT	= ..
-SRC		= .
+LIB_SRC		= .
+SRC		= $(EMACS_ROOT)/src
+NT_INC		= $(EMACS_ROOT)/nt/inc
+GNU_LIB		= $(EMACS_ROOT)/lib
+
+MS_W32_H       = $(SRC)/s/ms-w32.h \
+		 $(NT_INC)/sys/stat.h
+CONFIG_H       = $(SRC)/config.h \
+		 $(MS_W32_H)
+INTTYPES_H     = $(NT_INC)/inttypes.h \
+		 $(NT_INC)/stdint.h
+NTLIB_H        = $(LIB_SRC)/ntlib.h \
+		 $(NT_INC)/pwd.h
+SYSTIME_H      = $(SRC)/systime.h \
+		 $(NT_INC)/sys/time.h \
+		 $(GNU_LIB)/timespec.h
 
 $(BLD)/ctags.$(O) : \
-	$(SRC)/ctags.c \
-	$(EMACS_ROOT)/nt/inc/sys/param.h \
-	$(EMACS_ROOT)/nt/inc/sys/stat.h \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h \
-	$(SRC)/ntlib.h \
-	$(EMACS_ROOT)/lib/c-strcase.h \
-	$(EMACS_ROOT)/lib/getopt.h
+	$(LIB_SRC)/ctags.c \
+	$(SRC)/regex.h \
+	$(NT_INC)/sys/stat.h \
+	$(NT_INC)/unistd.h \
+	$(GNU_LIB)/c-strcase.h \
+	$(GNU_LIB)/getopt.h \
+	$(CONFIG_H)
 
 $(BLD)/ebrowse.$(O) : \
-	$(SRC)/ebrowse.c \
-	$(EMACS_ROOT)/lib/min-max.h \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h
+	$(LIB_SRC)/ebrowse.c \
+	$(GNU_LIB)/getopt.h \
+	$(GNU_LIB)/min-max.h \
+	$(CONFIG_H)
 
 $(BLD)/emacsclient.$(O) : \
-	$(SRC)/emacsclient.c \
-	$(EMACS_ROOT)/nt/inc/sys/stat.h \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h
+	$(LIB_SRC)/emacsclient.c \
+	$(NT_INC)/pwd.h \
+	$(NT_INC)/sys/stat.h \
+	$(NT_INC)/unistd.h \
+	$(GNU_LIB)/getopt.h \
+	$(CONFIG_H)
 
 $(BLD)/etags.$(O) : \
-	$(SRC)/etags.c \
-	$(EMACS_ROOT)/nt/inc/sys/param.h \
-	$(EMACS_ROOT)/nt/inc/sys/stat.h \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h \
-	$(SRC)/ntlib.h \
-	$(EMACS_ROOT)/lib/c-strcase.h \
-	$(EMACS_ROOT)/lib/getopt.h
+	$(LIB_SRC)/etags.c \
+	$(SRC)/regex.h \
+	$(NT_INC)/sys/stat.h \
+	$(NT_INC)/unistd.h \
+	$(GNU_LIB)/c-strcase.h \
+	$(GNU_LIB)/getopt.h \
+	$(CONFIG_H)
 
 $(BLD)/hexl.$(O) : \
-	$(SRC)/hexl.c
+	$(LIB_SRC)/hexl.c \
+	$(CONFIG_H)
 
 $(BLD)/make-docfile.$(O) : \
-	$(SRC)/make-docfile.c \
-	$(EMACS_ROOT)/src/config.h
+	$(LIB_SRC)/make-docfile.c \
+	$(NT_INC)/unistd.h \
+	$(CONFIG_H)
 
 $(BLD)/movemail.$(O) : \
-	$(SRC)/movemail.c \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h \
-	$(EMACS_ROOT)/nt/inc/sys/file.h \
-	$(EMACS_ROOT)/nt/inc/sys/stat.h \
-	$(EMACS_ROOT)/lib-src/../src/syswait.h \
-	$(EMACS_ROOT)/nt/inc/pwd.h \
-	$(SRC)/ntlib.h
-	$(CC) $(CFLAGS) -DUSG $(CC_OUT)$@ movemail.c
+	$(LIB_SRC)/movemail.c \
+	$(LIB_SRC)/pop.h \
+	$(SRC)/syswait.h \
+	$(NT_INC)/pwd.h \
+	$(NT_INC)/sys/file.h \
+	$(NT_INC)/sys/stat.h \
+	$(NT_INC)/unistd.h \
+	$(GNU_LIB)/getopt.h \
+	$(CONFIG_H) \
+	$(NTLIB_H)
 
 $(BLD)/ntlib.$(O) : \
-	$(SRC)/ntlib.c \
-	$(SRC)/ntlib.h \
-	$(EMACS_ROOT)/nt/inc/sys/stat.h \
-	$(EMACS_ROOT)/nt/inc/pwd.h
+	$(LIB_SRC)/ntlib.c \
+	$(NT_INC)/sys/stat.h \
+	$(NTLIB_H)
 
 $(BLD)/pop.$(O) : \
-	$(SRC)/pop.c \
-	$(SRC)/pop.h \
-	$(EMACS_ROOT)/lib/min-max.h \
-	$(SRC)/ntlib.h
+	$(LIB_SRC)/pop.c \
+	$(LIB_SRC)/pop.h \
+	$(NT_INC)/netdb.h \
+	$(NT_INC)/pwd.h \
+	$(NT_INC)/unistd.h \
+	$(GNU_LIB)/min-max.h \
+	$(CONFIG_H) \
+	$(NTLIB_H)
 
 $(BLD)/profile.$(O) : \
-	$(SRC)/profile.c \
-	$(EMACS_ROOT)/src/s/ms-w32.h \
-	$(EMACS_ROOT)/lib-src/../src/config.h \
-	$(EMACS_ROOT)/lib-src/../src/systime.h
+	$(LIB_SRC)/profile.c \
+	$(GNU_LIB)/intprops.h \
+	$(CONFIG_H) \
+	$(INTTYPES_H) \
+	$(SYSTIME_H)
+
+$(BLD)/regex.$(O) : \
+	$(SRC)/regex.c \
+	$(SRC)/regex.h \
+	$(NT_INC)/unistd.h \
+	$(CONFIG_H)
 
 $(BLD)/test-distrib.$(O) : \
-	$(SRC)/test-distrib.c
+	$(LIB_SRC)/test-distrib.c \
+	$(NT_INC)/unistd.h \
+	$(CONFIG_H)
 
 # The following dependencies are for supporting parallel builds, where
 # we must make sure $(BLD) exists before any compilation starts.
