Remove src/s/gnu.h
* configure.ac (opsysfile): Use bsd-common on gnu systems.

* src/s/gnu.h: Remove file, which is now empty.

--- a/configure.ac
+++ b/configure.ac
@@ -3254,6 +3254,8 @@ case $opsys in
 esac
 
 case $opsys in
+   gnu) opsysfile="s/bsd-common.h" ;;
+
    gnu-kfreebsd) opsysfile="s/gnu-linux.h" ;;
 
    hpux11)
