All the cool platforms support CLASH_DETECTION...
* configure.ac (CLASH_DETECTION): Define unconditionally.
Every platform using configure supports it.

* src/s/aix4-2.h, src/s/bsd-common.h, src/s/cygwin.h, src/s/darwin.h:
* src/s/gnu-linux.h, src/s/hpux10-20.h, src/s/template.h:
* src/s/usg5-4-common.h: Move CLASH_DETECTION to configure.

* etc/PROBLEMS: Recommend customizing create-lockfiles rather than
recompiling with CLASH_DETECTION unset.

--- a/configure.ac
+++ b/configure.ac
@@ -3124,6 +3124,14 @@ dnl                                and macros for terminal control.])
 dnl    AC_DEFINE(HAVE_TCATTR, 1, [Define to 1 if you have tcgetattr and tcsetattr.])
 dnl fi
 
+dnl Every platform that uses configure (ie every non-MS platform)
+dnl supports this.  There is a create-lockfiles option you can
+dnl customize if you do not want the lock files to be written.
+dnl So it is not clear that this #define still needs to exist.
+AC_DEFINE(CLASH_DETECTION, 1, [Define if you want lock files to be written,
+  so that Emacs can tell instantly when you try to modify a file that
+  someone else has modified in his/her Emacs.])
+
 case $opsys in
   darwin | gnu | hpux* | *bsd )
     AC_DEFINE(NO_TERMIO, 1, [Define if termio.h should not be included.])
